tests/baselines/reference/bigintAmbientMinimal(target=es2015).errors.txt
/main.ts(5,17): error TS2737: BigInt literals are not available when targeting lower than ES2020.


==== /ambient.d.ts (0 errors) ====
    declare const fromDts = 789n;
    declare namespace Lib {
        const value = 999n;
    }
    
==== /main.ts (1 errors) ====
    // Minimal repro from issue
    declare const n = 123n;
    
    // Non-ambient for comparison
    const regular = 456n;
                    ~~~~
!!! error TS2737: BigInt literals are not available when targeting lower than ES2020.